--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <div class="left">Azlan's Portfolio</div>
         <div class="right">
             <ul>
-              <li>Home</a></li>
-              <li>About</a></li>
-              <li>Services</a></li>
-              <li>Projects</a></li>
-              <li>Contact Me</a></li>
+              <li><a href="/">Home</a></li>
+              <li><a href="about">About</a></li>
+              <li><a href="services">Services</a></li>
+              <li><a href="projects">Projects</a></li>
+              <li><a href="contact">Contact Me</a></li>
             </ul>
           </div>
         </div>
@@ -29,11 +29,22 @@
         <section class="firstSection">
             <div class="leftSection">Hi, my name is <span class="purple">Azlan Waleed</span>
                 <div>and I am a Web Developer</div>
+                <span id="element"></span>
             </div>
             <div class="rightSection">
                 <img src="bg1.png" alt="" />
             </div>
         </section>
+
+        <hr>
+        <section class="secondSection"><h1>Work Experience</h1></section>
     </main>
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+    <script>
+      var typed = new Typed('#element',  {
+        strings: ['Mern Stack Developer', ' Software Engineer','Next.Js Developer','Web Desinger'],
+        typeSpeed: 50,
+      });
+    </script>
   </body>
 </html>
